--- a/config/database.yml
+++ b/config/database.yml
@@ -23,15 +23,8 @@ default: &default
 development:
   <<: *default
   database: backend_evaluation_2025_06_development
-
-  # The specified database role being used to connect to PostgreSQL.
-  # To create additional roles in PostgreSQL see `$ createuser --help`.
-  # When left blank, PostgreSQL will use the default role. This is
-  # the same name as the operating system user running Rails.
-  #username: backend_evaluation_2025_06
-
-  # The password associated with the PostgreSQL role (username).
-  #password:
+  username: postgres
+  password: postgres
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,6 +50,8 @@ development:
 test:
   <<: *default
   database: backend_evaluation_2025_06_test
+  username: postgres
+  password: postgres
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
