--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,13 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: park42/.ruby-version
           bundler-cache: true
+          working-directory: park42
 
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
+        working-directory: park42
 
   lint:
     runs-on: ubuntu-latest
@@ -31,11 +33,13 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: park42/.ruby-version
           bundler-cache: true
+          working-directory: park42
 
       - name: Lint code for consistent style
         run: bin/rubocop -f github
+        working-directory: park42
 
   test:
     runs-on: ubuntu-latest
@@ -66,8 +70,9 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: park42/.ruby-version
           bundler-cache: true
+          working-directory: park42
 
       - name: Run tests
         env:
@@ -75,3 +80,4 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:test:prepare test
+        working-directory: park42
