--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: park42/.ruby-version
+          ruby-version: .ruby-version
           bundler-cache: true
           working-directory: park42
 
@@ -33,7 +33,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: park42/.ruby-version
+          ruby-version: .ruby-version
           bundler-cache: true
           working-directory: park42
 
@@ -70,7 +70,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: park42/.ruby-version
+          ruby-version: .ruby-version
           bundler-cache: true
           working-directory: park42
 
