Add Redis and Sidekiq for background jobs

--- a/park42/Gemfile
+++ b/park42/Gemfile
@@ -29,6 +29,9 @@ gem "kamal", require: false
 # Add HTTP asset caching/compression and X-Sendfile acceleration to Puma [https://github.com/basecamp/thruster/]
 gem "thruster", require: false
 
+# Background job processing with Redis
+gem "sidekiq"
+
 # Swagger API documentation
 gem "rswag-ui"
 gem "rswag-api"
