--- a/park42/docker-compose.yml
+++ b/park42/docker-compose.yml
@@ -8,5 +8,12 @@ services:
       - postgres-data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+  redis:
+    image: redis:7
+    volumes:
+      - redis-data:/data
+    ports:
+      - '6379:6379'
 volumes:
   postgres-data:
+  redis-data:
