Use /webhooks/payment and allow host access

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     command: bash -c 'bundle install && bin/dev'
     environment:
       RACK_ENV: development
-      PAYMENT_WEBHOOK_URL: http://host.docker.internal:3000/payment-webhook
+      PAYMENT_WEBHOOK_URL: http://host.docker.internal:3000/webhooks/payment
     extra_hosts:
       - "host.docker.internal:host-gateway"
     ports:
