--- a/park42/Gemfile
+++ b/park42/Gemfile
@@ -51,5 +51,6 @@ group :development, :test do
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
+  gem "rspec-rails"
   gem "rswag-specs", require: false
 end
