--- a/park42/Gemfile
+++ b/park42/Gemfile
@@ -36,6 +36,8 @@ gem "sidekiq"
 gem "rswag-ui"
 gem "rswag-api"
 
+gem "faraday"
+
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
@@ -53,4 +55,7 @@ group :development, :test do
   gem "rubocop-rails-omakase", require: false
   gem "rspec-rails"
   gem "rswag-specs", require: false
+  gem "shoulda-matchers"
+  gem "factory_bot_rails"
+  gem "faker"
 end
